--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "2-tribute-page"]
 	path = 2-tribute-page
 	url = https://github.com/anirudha-8/tribute-page.git
+[submodule "3-technical-documentation"]
+	path = 3-technical-documentation
+	url = https://github.com/anirudha-8/technical-documentation.git
